Closed Bug 1100923 Opened 10 years ago Closed 10 years ago

Visibility error compiling JS::dbg::onPromiseSettled() with clang on linux

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file)

I get the following output:

/home/jon/clone/compacting/js/src/vm/Debugger.cpp:7220:1: error: visibility does not match previous declaration
JS_PUBLIC_API(void)
^
/home/jon/clone/compacting/js/src/jstypes.h:74:30: note: expanded from macro 'JS_PUBLIC_API'
#  define JS_PUBLIC_API(t)   MOZ_EXPORT t
                             ^
../../dist/include/mozilla/Types.h:44:45: note: expanded from macro 'MOZ_EXPORT'
#    define MOZ_EXPORT       __attribute__((visibility("default")))
                                            ^
/home/jon/clone/compacting/config/gcc_hidden.h:6:13: note: previous attribute is here
#pragma GCC visibility push(hidden)
            ^
The declaration of onPromiseSettled() needs to use JS_PUBLIC_API like the definition.
Attachment #8524583 - Flags: review?(nfitzgerald)
Comment on attachment 8524583 [details] [diff] [review]
bug1100923-onPromiseSettled

Review of attachment 8524583 [details] [diff] [review]:
-----------------------------------------------------------------

Sorry about that.
Attachment #8524583 - Flags: review?(nfitzgerald) → review+
https://hg.mozilla.org/mozilla-central/rev/803d228d69fe
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.