Bug 1100923 - Make onPromiseSettled() declaration JS_PUBLIC_API. r=fitzgen